# Victor

./: .gitignore  README.md
aOS/: .env.example  ARCHITECTURE.md  HANDOFF.md  __init__.py  docker-compose.yml  mosquitto.conf  pyproject.toml
aOS/android/: __init__.py  adb_controller.py
aOS/config/: __init__.py
aOS/consolidation/: __init__.py  nightly_cycle.py
aOS/core/: __init__.py  architect_agent.py  cluster_manager.py  resource_monitor.py
aOS/memory/: __init__.py  context_manager.py  mem0_controller.py
aOS/plugins/: __init__.py  plugin_manager.py
aOS/scripts/: nightly_cron.sh  setup_tailscale.sh
aOS/security/: __init__.py  sandbox.py
aOS/self_correction/: __init__.py  masc_engine.py
