# aOS - Agentic Operating System
# Fast Python package manager and environment manager

[project]
name = "aos"
version = "0.1.0"
description = "Agentic Operating System - 3-Node Local AI Fabric"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core infrastructure
    "redis>=5.0.0",
    "paho-mqtt>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    
    # ML/AI stack
    "litellm>=1.40.0",
    "exo>=0.0.1",
    "ollama>=0.3.0",
    "mem0ai>=0.1.0",
    "unsloth>=2024.11.0",
    
    # System monitoring
    "psutil>=6.0.0",
    
    # Android control
    "pure-python-adb>=0.3.0",
    
    # Utilities
    "numpy>=1.26.0",
    "aiofiles>=24.0.0",
    "lz4>=4.3.0",
    "httpx>=0.27.0",
    
    # Telemetry
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "T20"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true